tests/baselines/reference/declFileExportAssignmentOfGenericInterface(strict=true).errors.txt
declFileExportAssignmentOfGenericInterface_1.ts(3,1): error TS2454: Variable 'x' is used before being assigned.


==== declFileExportAssignmentOfGenericInterface_1.ts (1 errors) ====
    import a = require('declFileExportAssignmentOfGenericInterface_0');
    export var x: a<a<string>>;
    x.a;
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
==== declFileExportAssignmentOfGenericInterface_0.ts (0 errors) ====
    interface Foo<T> {
        a: string;
    }
    export = Foo;
    